fixed responsive game mobile

--- a/risk-front-end/src/components/Player/PlayerFrame.css
+++ b/risk-front-end/src/components/Player/PlayerFrame.css
@@ -8,3 +8,10 @@
     align-items: center;
     background-color: rgba(98,98,98,0.53)
 }
+
+@media (max-width: 950px) {
+    .playerFrameBox{
+        background-color: rgba(0,0,0,0);
+        border: none!important;
+    }
+}
